--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ torchvision==0.19.0
 transformers==4.40.0
 Pillow==10.3.0
 sentencepiece==0.2.0
+protobuf==4.25.3
 
 # Configuration and utilities
 PyYAML==6.0.2
