--- a/.github/workflows/daily-scrape.yml
+++ b/.github/workflows/daily-scrape.yml
@@ -21,17 +21,12 @@ jobs:
           python-version: '3.11'
           cache: 'pip'
       
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgl1 libglib2.0-0
-      
       - name: Install Python dependencies
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
       
-      - name: Install Playwright browsers
+      - name: Install Playwright browsers and dependencies
         run: |
           playwright install chromium
           playwright install-deps chromium
