--- a/.github/workflows/daily-scrape.yml
+++ b/.github/workflows/daily-scrape.yml
@@ -26,10 +26,14 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
       
-      - name: Install Playwright browsers and dependencies
+      - name: Install Playwright system dependencies (Ubuntu 24.04 fix)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libasound2t64 libnss3 libnspr4 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 libpango-1.0-0 libcairo2 libatspi2.0-0 libxshmfence1
+      
+      - name: Install Playwright browsers
         run: |
           playwright install chromium
-          playwright install-deps chromium
       
       - name: Set up Supabase credentials
         env:
