--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 playwright==1.40.0
 beautifulsoup4==4.12.2
 requests==2.31.0
-supabase==2.3.0
+supabase==2.3.4
 transformers==4.36.0
 torch==2.1.0
 torchvision==0.16.0
+numpy<2.0.0
 pillow==10.1.0
 python-dotenv==1.0.0
 tqdm==4.66.1
