--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 playwright==1.40.0
 beautifulsoup4==4.12.2
 requests==2.31.0
-supabase==2.3.4
+supabase==2.5.0
+httpx==0.27.0
+gotrue==1.3.0
 transformers==4.36.0
 torch==2.1.0
 torchvision==0.16.0
