Improve scraper with Firefox fallback and better anti-detection for headless mode

--- a/.github/workflows/daily-scrape.yml
+++ b/.github/workflows/daily-scrape.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Install Playwright browsers
         run: |
           playwright install chromium
+          playwright install firefox
       
       - name: Set up Supabase credentials
         env:
