Update torch version for transformers 4.37+ compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ beautifulsoup4==4.12.2
 requests==2.31.0
 supabase==2.7.4
 transformers>=4.37.0
-torch==2.1.0
-torchvision==0.16.0
+torch>=2.2.0
+torchvision>=0.17.0
 numpy<2.0.0
 pillow==10.1.0
 python-dotenv==1.0.0
